# Rust_OPENAI_CALL

./: .gitignore  README.md
Rust_OpenAI/: Cargo.toml
Rust_OpenAI/src/: main.rs
